[package]
name = "waitfor"
version = "0.1.0"
authors = ["Adam Shirey <adam.shirey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
clap = "2.33.3"
ureq = "1.5.1"
url = "2.2.0"
