[package]
name = "waitforit"
version = "0.1.0"
authors = ["Adam Shirey <adam@shirey.ch>"]
edition = "2021"


description = "A library to aid in synchronously waiting for some condition to be met."
readme = "README.md"
homepage = "https://github.com/aeshirey/waitforit/"
repository = "https://github.com/aeshirey/waitforit/"
license = "MIT OR Apache-2.0"
keywords = ["delay", "wait"]


[dependencies]
ureq = "1.5.1"
url = "2.2.0"
